# meshestra

./: .gitignore  Cargo.toml  이것도.md
examples/example-server/: .env  Cargo.toml
examples/example-server/.rest/: api.http
examples/example-server/src/: app_module.rs  main.rs
examples/example-server/src/infrastructure/: database.rs  transaction.rs
examples/example-server/src/infrastructure/database/: mod.rs
examples/example-server/src/modules/product/: controller.rs  mod.rs  model.rs  product_entity.rs  repository.rs  service.rs
examples/example-server/src/modules/user/: mod.rs  user_service.rs
examples/example-server/src/modules/user/controller/: mod.rs  user_controller.rs
examples/example-server/src/modules/user/domain/: mod.rs  user_entity.rs  user_model.rs
examples/example-server/src/modules/user/repository/: user_repository.rs
examples/example-server/src/modules/user/service/: mod.rs  user_service.rs
examples/example-worker/: Cargo.toml
meshestra-aspect/: 1.md  Cargo.toml
meshestra-aspect/meshestra-aspect-macros/: Cargo.toml
meshestra-batch/: Cargo.toml
meshestra-cli/: Cargo.toml
meshestra-gateway/: Cargo.toml
meshestra-macro/: Cargo.toml
meshestra-macro/src/: aspect.rs  controller.rs  exception.rs  http_methods.rs  injectable.rs  interceptor.rs  lib.rs  module.rs  transactional.rs
meshestra-persistence/: 1.md  Cargo.toml  README.md  architecture.md
meshestra-persistence/meshestra-persistence-macros/: Cargo.toml
meshestra-testing/: Cargo.toml
src/: error.rs  lib.rs
src/aspect/: mod.rs
src/common/: mod.rs  response.rs  status_code.rs
src/config/: mod.rs
src/controller/: mod.rs
src/di/: builder.rs  container.rs  extractor.rs  injectable.rs  lazy.rs  mod.rs
src/exception/: http.rs  mod.rs
src/guard/: layer.rs  mod.rs
src/interceptor/: layer.rs  logging.rs  mod.rs
src/lifecycle/: application.rs  error.rs  manager.rs  mod.rs  shutdown.rs  traits.rs
src/messaging/: mod.rs
src/module/: mod.rs
src/pipe/: builtins.rs  mod.rs
src/saga/: mod.rs
src/transactional/: TRANSACTIONAL_SPEC.md  mod.rs
src/worker/: mod.rs
