[package]
name = "meshestra-macro"
version = "0.1.0"
edition = "2021"
authors = ["Meshestra Team"]
description = "Procedural macros for Meshestra framework"
repository = "https://github.com/your-org/meshestra"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

[dev-dependencies]
