[package]
name = "example-server"
version = "0.1.0"
edition = "2021"

[dependencies]
meshestra = { path = "../../" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
